# match_t

./: Cargo.toml  README.md
src/: common.rs  if.rs  lib.rs  match.rs  meta_expr.rs
src/meta_tokens/: mod.rs  parse.rs  stream.rs  token.rs  utils.rs
tests/: all.rs
tests/compile_fail/: multiple_metavar_names.rs  multiple_metavar_names.stderr  no_default_match.rs  tailcast_without_default_arm.rs  tailcast_without_default_arm.stderr
