[package]
name = "match_t"
version = "0.0.0"
description = "Compare generic types with concrete types in Rust."
license = "GPL-3.0"
repository = "https://github.com/Megadash452/match_t"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
either = "1.15.0"
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["full"] }
